--- a/jankenpo.ng.html
+++ b/jankenpo.ng.html
@@ -3,7 +3,22 @@
     <h1 class="title">Jankenpo</h1>
   </ion-header-bar>
   <ion-content class="padding">
-    <div class="list">
+    <div class="list card">
+      <div class="item item-icon-left">
+        <i class="icon ion-android-star"></i>
+        Ganhou {{wins}} vez{{wins > 1 ? 'es':''}}
+      </div>
+      <div class="item item-icon-left">
+        <i class="icon ion-android-star-half"></i>
+        Empatou {{draws}} vez{{draws > 1 ? 'es':''}}
+      </div>
+      <div class="item item-icon-left">
+        <i class="icon ion-android-star-outline"></i>
+        Perdeu {{losses}} vez{{losses > 1 ? 'es':''}}
+      </div>
+    </div>
+    <!-- Elements of the game -->
+    <div class="list card">
       <div class="item item-button">
         <button class="button button-block" on-tap="onChoose('pedra')">
           Pedra
