--- a/jankenpo.ng.html
+++ b/jankenpo.ng.html
@@ -18,22 +18,28 @@
       </div>
     </div>
     <!-- Elements of the game -->
-    <div class="list card">
-      <div class="item item-button">
-        <button class="button button-block" on-tap="onChoose('pedra')">
-          Pedra
-        </button>
-      </div>
-      <div class="item item-button">
-        <button class="button button-block" on-tap="onChoose('papel')">
-          Papel
-        </button>
-      </div>
-      <div class="item item-button">
-        <button class="button button-block" on-tap="onChoose('tesoura')">
-          Tesoura
-        </button>
-      </div>
-    </div>
+    <ion-slide-box>
+      <ion-slide>
+        <div class="list card">
+          <div class="item item-image">
+            <img ng-src="imgs/rock.png" on-tap="onChoose('pedra')">
+          </div>
+        </div>
+      </ion-slide>
+      <ion-slide>
+        <div class="list card">
+          <div class="item item-image">
+            <img ng-src="imgs/paper.png" on-tap="onChoose('papel')">
+          </div>
+        </div>
+      </ion-slide>
+      <ion-slide>
+        <div class="list card">
+          <div class="item item-image">
+            <img ng-src="imgs/scissors.png" on-tap="onChoose('tesoura')">
+          </div>
+        </div>
+      </ion-slide>
+    </ion-slide-box>
   </ion-content>
 </ion-pane>
