Improved UI style

--- a/jankenpo.ng.html
+++ b/jankenpo.ng.html
@@ -1,8 +1,8 @@
-<ion-pane ng-controller="MainCtrl">
-  <ion-header-bar class="bar-dark">
+<ion-pane class="custom-bg" ng-controller="MainCtrl">
+  <div class="bar bar-header bar-custom">
     <h1 class="title">Jankenpo</h1>
-  </ion-header-bar>
-  <ion-content class="padding">
+  </div>
+  <ion-content class="padding custom-padding">
     <div class="list card">
       <div class="item item-icon-left">
         <i class="icon ion-android-star"></i>
