Refactor on the methods of machine game

--- a/jankenpo.html
+++ b/jankenpo.html
@@ -4,6 +4,6 @@
   <title>jankenpo</title>
 </head>
 
-<body ng-app="jankenpo" ng-strict-di="true">
+<body ng-strict-di="true">
   <div ng-include="'jankenpo.ng.html'"></div>
 </body>
