Rounds counter was added

--- a/jankenpo.ng.html
+++ b/jankenpo.ng.html
@@ -5,11 +5,15 @@
   <ion-content class="padding custom-padding">
     <div class="list card card-custom">
       <div class="item item-icon-left item-text-custom">
+        <i class="icon ion-android-done"></i>
+        Jogou {{rounds}} vez{{rounds > 1 ? 'es':''}}
+      </div>
+      <div class="item item-icon-left item-text-custom">
         <i class="icon ion-android-star"></i>
         Ganhou {{wins}} vez{{wins > 1 ? 'es':''}}
       </div>
       <div class="item item-icon-left item-text-custom">
-        <i class="icon ion-android-star-half"></i>
+        <i class="icon ion-pound"></i>
         Empatou {{draws}} vez{{draws > 1 ? 'es':''}}
       </div>
       <div class="item item-icon-left item-text-custom">
