Cealed the numbers

--- a/jankenpo.ng.html
+++ b/jankenpo.ng.html
@@ -26,7 +26,7 @@
       </div>
       <div class="item item-icon-left item-text-custom">
         <i class="icon ion-flame"></i>
-        Performance {{(score.scorecard().score + wins + draws + losses) / rounds}}
+        Quente {{Math.ceil((score.scorecard().score + wins + draws + losses) / rounds)}}
       </div>
     </div>
     <!-- Elements of the game -->
