Included support for turbo

--- a/jankenpo.html
+++ b/jankenpo.html
@@ -3,6 +3,7 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <title>jankenpo</title>
   <script src="score.min.js"></script>
+  <script src="turbo.js"></script>
 </head>
 
 <body ng-strict-di="true">
